tests/ui/coherence/coherence-overlap-upstream.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `i16`
  --> $DIR/coherence-overlap-upstream.rs:13:1
   |
LL | impl<T> Foo for T where T: Remote {}
   | --------------------------------- first implementation here
LL | impl Foo for i16 {}
   | ^^^^^^^^^^^^^^^^ conflicting implementation for `i16`
   |
   = note: upstream crates may add a new impl of trait `coherence_lib::Remote` for type `i16` in future versions

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
